# xai-talent-pool

./: .gitignore  CANDIDATE_SCORING_SYSTEM.md  CLAUDE.md  Makefile  README.md  RLHF_GRPO_README.md  bay_area_tech_profiles.md  generate_bay_area_profiles.py
grok-service/: .env.example  .gitignore  README.md  pyproject.toml
grok-service/src/grok_service/: __init__.py  config.py  main.py  models.py
grok-service/src/grok_service/routers/: __init__.py  candidate_research.py  collections.py  job_matching.py  ranking.py  scoring.py  screening.py  social_media.py
grok-service/src/grok_service/services/: __init__.py  candidate_research.py  collections.py  grok.py  job_matching.py  pdf.py  ranking.py  scoring.py  (+1 more)
grok-service/tests/: __init__.py  test_health.py
server/: Cargo.toml
server/migrations/: 001_create_talents_table.sql  002_create_jobs_table.sql  003_create_applications_table.sql  004_add_talent_resume_fields.sql  005_add_talent_collection_id.sql  006_add_talent_resume_document_id.sql  007_add_social_report_ids.sql  007_add_talent_social_analysis.sql  007_create_hiring_requirements_table.sql  008_add_social_research_status.sql  008_add_talent_candidate_score.sql  008_create_reorder_tables.sql  009_add_tldr_fields.sql  009_create_reorder_tables.sql  010_create_job_matches_table.sql
server/src/: database.rs  grok_client.rs  lib.rs  main.rs  models.rs  reorder.rs
server/src/httpd/: applications.rs  hiring_requirements.rs  jobs.rs  mod.rs  reorder.rs  server.rs  social_media.rs  talents.rs
server/src/queries/: delete_application.sql  delete_job.sql  delete_talent.sql  get_all_jobs.sql  get_all_talents.sql  get_application_by_id.sql  get_applications_by_job.sql  get_applications_by_talent.sql  get_job_by_id.sql  get_talent_by_email.sql  get_talent_by_id.sql  insert_application.sql  insert_job.sql  insert_talent.sql  update_job.sql  update_talent.sql  update_talent_resume_fields.sql
(+29 files in other folders)
