[package]
name = "talent-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "talent-server"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
paperclip = { version = "0.8.0", features = ["actix4", "uuid1", "chrono"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "macros", "json", "migrate"] }
base64 = "0.22"